# vyatta-eventwatch

./: .frlog  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  configure.ac  eventwatchd.conf.sample
debian/: README  changelog  control  rules
debian/vyatta-eventmon/DEBIAN/: control  md5sums
debian/vyatta-eventmon/opt/vyatta/sbin/: eventmond.pl
debian/vyatta-eventmon/opt/vyatta/share/vyatta-cfg/templates/system/event-handler/: node.def
debian/vyatta-eventmon/opt/vyatta/share/vyatta-cfg/templates/system/event-handler/feed/node.tag/policy/: node.def
debian/vyatta-eventmon/opt/vyatta/share/vyatta-cfg/templates/system/event-handler/feed/node.tag/source/preset/: node.def
debian/vyatta-eventmon/opt/vyatta/share/vyatta-cfg/templates/system/event-handler/policy/node.tag/event/: node.def
debian/vyatta-eventmon/usr/share/lintian/overrides/: vyatta-eventmon
scripts/: eventwatchd.pl
templates/system/event-handler/: node.def
